--- a/app/views/bracket/_bracket_entry.html.erb
+++ b/app/views/bracket/_bracket_entry.html.erb
@@ -1,4 +1,5 @@
-
-<span><%= entry.seed %></span> -
-<span><%= entry.ncaa_team.school %></span><br/>
-<span><%= collection_select('bracket_entry_' + entry.seed.to_s, :ncaa_team_id, NcaaTeam.all(:order => "school"), :id, :school, {:selected => entry.ncaa_team.id}) %></span><br/>
+<div class="padding-sm">
+  <span><%= entry.seed %></span> -
+  <span><%= entry.ncaa_team.school %></span><br/>
+  <span><%= collection_select('bracket_entry_' + entry.seed.to_s, :ncaa_team_id, NcaaTeam.all(:order => "school"), :id, :school, {:selected => entry.ncaa_team.id}) %></span>
+</div>
