--- a/app/views/draft/_draft_picks.html.erb
+++ b/app/views/draft/_draft_picks.html.erb
@@ -1,6 +1,6 @@
 <div id="draft_board_container_header">Draft Selections for the Current Round (<%= @draft.current_draft_pick.round %>)</div>
-<div class="left_container"><span class="current_pick_selection"><span style="white-space: pre;">    </span></span> - Indicates the current selection</div>
-<div class="left_container"><span class="current_user_team_selection"><span style="white-space: pre;">    </span></span> - Indicates your teams selection</div>
+<div class="col-md-6"><span class="current_pick_selection"><span style="white-space: pre;">    </span></span> - Indicates the current selection</div>
+<div class="col-md-6"><span class="current_user_team_selection"><span style="white-space: pre;">    </span></span> - Indicates your teams selection</div>
 <div class="clear"></div>
 <table class="draftpicks_table_headers">
   <tr>
