--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,17 @@
 <div id="mm_team_roster_container">
-
 </div>
 
 <div id="player_scoring_container">
-
 </div>
-<div class="left_container">
+
+<div class="left_container col-md-6">
   <div id="standings_container">
-    <%= render :partial => "standings" %>
+    <%= render "standings" %>
   </div>
 </div>
-<div class="right_container">
+<div class="right_container col-md-6">
   <div id="top_perf_container">
-    <%= render :partial => "top_scorers" %>
+    <%= render "top_scorers" %>
   </div>
 </div>
 <div class="clear"></div>
-
-
