--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -17,8 +17,10 @@
         <% end %>
       <% end %>
     </div>
-    <div id="logo_big"></div>
-    <div id="login_wrapper">
+    <div class="text-center">
+      <div id="logo_big"></div>
+    </div>
+    <div id="login_wrapper" class="col-md-4 col-md-offset-4">
       <div id="container">
         <%= yield %>
       </div>
