--- a/app/views/mm_teams/index.html.erb
+++ b/app/views/mm_teams/index.html.erb
@@ -1,6 +1,6 @@
 <div class="left_container">
-  <div class="standings_container_header">March Madness Teams</div>
-  <div style="float: right; padding-bottom: 5px;">
+  <h1 class="standings_container_header">March Madness Teams</h1>
+  <div class="pull-right padding-sm">
     <%= link_to 'New Team', new_mm_team_path %>
   </div>
   <div class="clear"></div>
