--- a/app/views/mm_teams/rosters.html.erb
+++ b/app/views/mm_teams/rosters.html.erb
@@ -4,7 +4,7 @@
         <div class="clear"></div>
       </div>
       <div class="module_container">
-        <table class="my_team_table">
+        <table class="table table-striped">
           <thead>
           <tr>
             <th rowspan="2" class="name">Team Name</th>
