--- a/app/views/ncaa_teams/edit.html.erb
+++ b/app/views/ncaa_teams/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Edit NCAA Team</h1>
+<div class="padding-md">
+  <h1>Edit NCAA Team</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @ncaa_team %> |
-<%= link_to 'Back', ncaa_teams_path %>
+  <%= link_to 'Show', @ncaa_team %> |
+  <%= link_to 'Back', ncaa_teams_path %>
+</div>
