--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,23 +1,32 @@
 <div class="left_container">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <h2 id="standings_container_header">Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
     <%= devise_error_messages! %>
 
-    <p><%= f.label :email %><br />
-      <%= f.text_field :email %></p>
+    <p class="form-group">
+      <%= f.label :email %><br />
+      <%= f.text_field :email, class: 'form-control', placeholder: 'Email' %>
+    </p>
 
-    <p><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password %></p>
+    <p class="form-group">
+      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
+    </p>
 
-    <p><%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %></p>
+    <p class="form-group">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password Confirmation' %>
+    </p>
 
-    <p><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password %></p>
+    <p class="form-group">
+      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+      <%= f.password_field :current_password, class: 'form-control', placeholder: 'Current Password' %>
+    </p>
 
-    <p><%= f.submit "Update" %></p>
+    <p class="text-center">
+      <%= f.submit "Update", class: 'btn btn-success' %>
+      <%= link_to "Back", :back, class: 'btn btn-danger' %>
+    </p>
   <% end %>
-
-  <%= link_to "Back", :back %>
 </div>
