--- a/app/views/shared/_ncaa_teams.html.erb
+++ b/app/views/shared/_ncaa_teams.html.erb
@@ -1,5 +1,5 @@
-<div id="standings_container_header">NCAA Teams</div>
-<div style="float: right; padding-bottom: 5px;">
+<h1 id="standings_container_header">NCAA Teams</h1>
+<div class="pull-right padding-sm">
   <%= link_to 'New Team', new_ncaa_team_path %>
 </div>
 <div class="clear"></div>
