--- a/app/views/mm_teams/_form.html.erb
+++ b/app/views/mm_teams/_form.html.erb
@@ -5,16 +5,16 @@
     </div>
   <% end %>
 
-	<div class="field">
+	<div class="form-group">
 	    Team Name<br />
-	    <%= f.text_field :name %>
+	    <%= f.text_field :name, class: 'form-control' %>
 	</div>
-	<div class="field">
+	<div class="form-group">
 		<%= f.label :user %><br />
 		<%= select(:mm_team, :user_id, options_from_collection_for_select(User.all, :id, :email)) %><br/>
 	</div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions padding-md text-center">
+    <%= f.submit 'Submit', class: 'btn btn-success' %>
   </div>
 <% end %>
