--- a/app/views/mm_teams/preferred_players.html.erb
+++ b/app/views/mm_teams/preferred_players.html.erb
@@ -1,15 +1,17 @@
-<div class="draft_menu">
+<div class="draft_menu padding-sm">
   <% if !session[:mm_team_id].nil? %>
-    <%= link_to 'Manage Draft', draft_index_path, :class=> "btn left float-left" %>
-    <%= link_to 'Manage Preferred Players', preferred_players_mm_team_url(get_team_for_current_user), :class=> "btn right float-left on" %>
-  <% end %>
+      <div class="btn-group">
+        <%= link_to 'Manage Draft', draft_index_path, :class=> "btn btn-default btn-sm" %>
+        <%= link_to 'Manage Preferred Players', preferred_players_mm_team_url(get_team_for_current_user), :class=> "btn btn-default btn-sm on" %>
+      </div>
+    <% end %>
 
   <%= link_to 'My Team', "#", :data => { :team => get_team_for_current_user.id }, :id => "my_team", :class => "btn float-left blue" %>
 
   <div class="clear"></div>
 </div>
 
-<div class="left_container">
+<div class="left_container col-md-6">
 
   <div id="preferred_players_container">
     <%= render "shared/preferred_player_list" %>
@@ -17,7 +19,7 @@
 
 </div>
 
-<div class="right_container">
+<div class="right_container col-md-6">
 
   <div id="draft_players_container">
     <%= render "shared/draft_player_list" %>
