--- a/app/views/ncaa_players/_form.html.erb
+++ b/app/views/ncaa_players/_form.html.erb
@@ -5,27 +5,27 @@
     </div>
  <% end %>
 
-	<div class="field">
+	<div class="form-group">
 	    First Name<br />
-	    <%= f.text_field :first_name %>
+	    <%= f.text_field :first_name, class: 'form-control' %>
 	</div>
-	<div class="field">
+	<div class="form-group">
 	    Last Name<br />
-	    <%= f.text_field :last_name %>
+	    <%= f.text_field :last_name, class: 'form-control' %>
 	</div>
-	<div class="field">
+	<div class="form-group">
 	    NCAA Team<br />
 		<%= collection_select(:ncaa_player, :ncaa_team_id, NcaaTeam.all(:order => "school"), :id, :school) %>
 	</div>
-	<div class="field">
+	<div class="form-group">
 		<%= f.label :position %><br />
 		<%= select(:ncaa_player, :position, NcaaPlayer::POSITIONS) %><br/>
 	</div>
-	<div class="field">
+	<div class="form-group">
 	    PPG.<br />
-	    <%= f.text_field :ppg_avg%>
+	    <%= f.text_field :ppg_avg, class: 'form-control' %>
 	</div>
-  	<div class="actions">
-	    <%= f.submit %>
+  	<div class="actions padding-md text-center">
+	    <%= f.submit "Submit", class: 'btn btn-success' %>
 	</div>
 <% end %>
