--- a/app/views/ncaa_teams/_form.html.erb
+++ b/app/views/ncaa_teams/_form.html.erb
@@ -5,15 +5,15 @@
 	    </div>
 	  <% end %>
 	
-	<div class="field">
+	<div class="form-group">
 	    School<br />
-	    <%= f.text_field :school %>
+	    <%= f.text_field :school, class: 'form-control' %>
 	</div>
-	<div class="field">
+	<div class="form-group">
 	    Nickname<br />
-	    <%= f.text_field :nickname %>
+	    <%= f.text_field :nickname, class: 'form-control' %>
 	</div>
-  	<div class="actions">
-    	<%= f.submit %>
+  	<div class="actions padding-md text-center">
+    	<%= f.submit "Submit", class: 'btn btn-success' %>
   	</div>
 <% end %>
