--- a/app/views/shared/_player_scoring.html.erb
+++ b/app/views/shared/_player_scoring.html.erb
@@ -1,30 +1,28 @@
 <div class="module">
-	<div class="module_header">Scoring Details for <%= @scoring_details[0].ncaa_player.full_name %>
-		<div style="float: right; padding-right: 3px;">
-			<%= link_to image_tag("close.png", :border => 0, :alt => 'Close', :style => 'vertical-align: text-top;'), '#', :title => "Close", :onclick => "$('#player_scoring_container').hide();" %>
-		</div>
+	<div class="module_header">
+		Scoring Details for <%= @scoring_details[0].ncaa_player.full_name %>
 		<div class="clear"></div>
 	</div>
-		<div class="module_container">
-			<table cellspacing="0" cellpadding="0" border="0">
-			  	<tr>
-			    	<td>
-			       		<table class="player_scoring_table_headers">
-			         		<tr>
-			            		<th class="name">Name</th>
+	<div class="module_container">
+		<table cellspacing="0" cellpadding="0" border="0">
+		  	<tr>
+		    	<td>
+		       		<table class="player_scoring_table_headers table table-striped no-margin">
+		         		<tr>
+		          		<th class="name">Name</th>
 						    	<th class="position">Position</th>
-								<th class="ppg">PPG.</th>
-								<th class="school">School</th>
-								<th class="round">Round</th>
-								<th class="points">Points</th>
-			         		</tr>
-			       		</table>
-			    	</td>
-			  	</tr>
-			  	<tr>
-					<td>
-						<div class="player_scoring_list">
-						<table class="player_scoring_table">
+									<th class="ppg">PPG.</th>
+									<th class="school">School</th>
+									<th class="round">Round</th>
+									<th class="points">Points</th>
+		         		</tr>
+		       		</table>
+		    	</td>
+		  	</tr>
+		  	<tr>
+				<td>
+					<div class="player_scoring_list">
+						<table class="player_scoring_table table table-striped">
 							<% @scoring_details.each_with_index do |entry, index| %>
 							  <tr>
 								<td class="name"><%= index == 0 ? entry.ncaa_player.full_name : '' %></td>
@@ -36,9 +34,9 @@
 							  </tr>
 							<% end %>
 						</table>
-						</div>
-					</td>
-				<tr>
-			</table>
-		</div>
+					</div>
+				</td>
+			<tr>
+		</table>
 	</div>
+</div>
