Modified updating a bracket and standings Games Remaining

--- a/app/assets/stylesheets/bracket.css.scss
+++ b/app/assets/stylesheets/bracket.css.scss
@@ -31,3 +31,17 @@ div.bracket_list {
         }
     }
 }
+
+div.west {
+  float: right;
+  height: auto;
+  width: 220px;
+  margin: 5px;
+}
+
+div.east {
+  float: left;
+  height: auto;
+  width: 220px;
+  margin: 5px;
+}
