--- a/app/views/bracket/index.html.erb
+++ b/app/views/bracket/index.html.erb
@@ -1,24 +1,67 @@
 <div id="bracket_container">
+
   <% if current_user.is_admin? %>
-        <%= form_tag(bracket_update_region_path, :method => "post") do %>
-        <% @bracket_entries.each do |entry|  %>
-            <% if entry.region.id == 4 %>
-                <% if entry.seed == 1 %>
-                    <div class="bracket_list">
-                    <div><%= entry.region.location %></div>
-                        <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
-                <% elsif entry.seed == 16 %>
-                      <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
-                    </div>
-                <% else %>
+        <%= form_tag(bracket_update_regions_path, :method => "post") do %>
+        <% @east_region_bracket_entries.each do |entry|  %>
+          <% if entry.seed == 1 %>
+              <div class="east">
+                <div><%= entry.region.location %></div>
+                <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+          <% elsif entry == @east_region_bracket_entries.last %>
+              <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+              </div>
+          <% else %>
+              <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+          <% end %>
+        <% end %>
+
+        <% @west_region_bracket_entries.each do |entry|  %>
+            <% if entry.seed == 1 %>
+                <div class="west">
+                <div><%= entry.region.location %></div>
                     <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
-                <% end %>
+            <% elsif entry == @west_region_bracket_entries.last %>
+                  <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+                </div>
+            <% else %>
+                <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
             <% end %>
         <% end %>
+        <div class="clear"></div>
+
+        <% @midwest_region_bracket_entries.each do |entry|  %>
+          <% if entry.seed == 1 %>
+              <div class="east">
+                <div><%= entry.region.location %></div>
+                <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+          <% elsif entry == @midwest_region_bracket_entries.last %>
+              <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+              </div>
+          <% else %>
+              <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+          <% end %>
+        <% end %>
+
+        <% @south_region_bracket_entries.each do |entry|  %>
+          <% if entry.seed == 1 %>
+              <div class="west">
+                <div><%= entry.region.location %></div>
+                <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+          <% elsif entry == @south_region_bracket_entries.last %>
+              <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+              </div>
+          <% else %>
+              <%= render :partial => "bracket_entry", :locals => {:entry => entry} %>
+          <% end %>
+        <% end %>
+
+        <div class="clear"></div>
+
         <%= submit_tag 'Save' %>
         <% end %>
     <% else %>
         <%= image_tag "2011_bracket.jpg", :alt => "" %>
     <% end %>
+
 </div>
 
