Updated bracket image

--- a/app/views/bracket/index.html.erb
+++ b/app/views/bracket/index.html.erb
@@ -63,7 +63,7 @@
         </div>
         <% end %>
     <% else %>
-        <%= image_tag "2011_bracket.jpg", :alt => "" %>
+        <%= image_tag "bracket.png", :alt => "", :size => "800x700" %>
     <% end %>
 
 </div>
