Removed images and modified bracket page with admin condition

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,7 +2,7 @@
   <span><%= link_to 'MM Teams', mm_teams_path %></span>
   <span><%= link_to 'NCAA Teams', ncaa_teams_path %></span>
   <span><%= link_to 'NCAA Players', ncaa_players_path %></span>
-  <span><%= link_to 'Bracket', bracket_index_path %></span>
+  <span><%= link_to 'Bracket', admin_bracket_path %></span>
 </div>
 <div id="draft_order" class="col-md-12">
   <%= render "draft_order" %>
