--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -240,9 +240,8 @@ textarea {
     margin-top: 6px;
     padding: 2px 10px 3px 10px;
     p {
-        font-size: 12px;
-        color: #FFF;
-        text-shadow: 0 2px #000;
+        font-size: 14px;
+        color: #3055e1;
     }
     a {
         font-size: 11px;
