Added 2015 bracket image

--- a/app/assets/stylesheets/bracket.css.scss
+++ b/app/assets/stylesheets/bracket.css.scss
@@ -1,5 +1,6 @@
 #bracket_container {
-    padding: 5%;
+    padding-left: 5%;
+    padding-top: 5px;
     overflow: auto;
     img {
         border: 10px solid #DEDEDE;
